# essensfindung

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api.html  dev_requirements.txt  docker-compose.yml  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: python-formatting.yml  python-validation.yml  sphinx-documentation.yml
_modules/: index.html  schemes.html
_modules/db/: database.html
_modules/schemes/: exceptions.html  scheme_allergie.html  scheme_cuisine.html  scheme_filter.html  scheme_recipe.html  scheme_rest.html  scheme_user.html
_modules/services/: service_res.html
_modules/tools/: config.html  gapi.html  hashing.html  legal.html  security.html
_modules/views/: error.html  index.html  rating.html  restaurant.html  signin.html
_sources/: api.rst.txt  usage.rst.txt
_sources/db/: base.rst.txt
_sources/services/: service_res.rst.txt
api/: README.md
app/: .env-example1  .env-example2  .gitattributes  logging.yml  main.py
app/db/: base.py  (+1 more)
configuration/: __init__.py  config.py  example_db.conf  google_api.conf.example
db/: base.html  base.py  base_class.py  crud.html  crud.py  database.html  database.py  db.html  db_models.py  models.html
docs/: requirements.txt
exceptions/: exceptions.html
infrastructure/: __init__.py  gapi.py
logs/: infos.log.1  infos.log.5
models/: README.md  __init__.py  filter.py  restaurant.py
schemes/: filter.py  scheme_filter.py  scheme_rest.py  schemes.html
services/: README.md  gapi.py  service_rec.html  service_res.html  service_res.py  services.html
static/: README.md
templates/: index.html  landing.html
tests/: example_restaurants.json  test_db.db  test_db.py  test_gapi.py  test_restaurant_service.py
tools/: config.html  gapi.html  gapi.py  hashing.html  legal.html  my_logging.html  recipe_db.html  security.html  tools.html
views/: error.html  home.py  index.html  index.py  rating.html  recipe.html  restaurant.html  restaurant.py  signin.html  signin.py  views.html
(+138 files in other folders)
