[tool.poetry]
name = "essensfindung"
version = "0.1.0"
description = "Student project for DHBW-Friedrichshafen to search for restaurant or recipe suggestions."
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
Jinja2 = "^3.0.3"
aiofiles = "^0.8.0"
pydantic = "^1.9.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
